rnsc/test_data/integration/error/parser/outside_class_directive/public_keyword.rns
   public
.class public HelloWorld



.super java/lang/Object
